<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/wallpaper1">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bo"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_shape"
        android:hint="@string/des"
        android:textSize="25sp"
        android:id="@+id/descriptionbooks"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePickerbooks"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:clickable="true"
        android:startYear="2016"
        android:endYear="2017"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/descriptionbooks"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/novelcheckBox" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/sb"
                android:id="@+id/storybookcheckBox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nbo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/notebookcheckBox" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mag"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/magazinescheckBox" />

        </LinearLayout>
    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:background="@drawable/login_press"
        android:id="@+id/buttonStationary"
        android:onClick="onStationarySubmit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />




</RelativeLayout>